--- a/modal.css
+++ b/modal.css
@@ -69,7 +69,7 @@ body {
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
-  background-size: 100%;
+  background-size: cover;
 }
 
 ul {
